<resources>
    <string name="app_name">Mera Gao</string>
    <string name="mera">Mera</string>
    <string name="gao">Gao</string>
    <string name="accounting_pensions"><![CDATA[Accounting & Pensions]]></string>
    <string name="panchayat_activities">Panchayat Activities</string>
    <string name="details_panchayat">Details about schemes, expenses and projects under Panchayat.</string>
    <string name="land_agriculture"><![CDATA[Land & Agriculture]]></string>
    <string name="details_land_agri">Details about the land aquisitions and agricultural activities.</string>
    <string name="work_labour"><![CDATA[Work & Labour]]></string>
    <string name="details_work_labour">Details about the work opportunities in village.</string>
    <string name="other_details">Other Details</string>
    <string name="credits">Credits</string>
    <string name="details_others">Details about other things like transport, payments etc.</string>
    <string name="planning">PLANNINGS</string>
    <string name="planning_details">Get the information about the upcoming and planned projects.</string>
    <string name="reporting">REPORTS</string>
    <string name="reporting_details">Get the details of ongoing or completed projects.</string>
    <string name="funds">FUNDS</string>
    <string name="funds_details">Get the details of the fund provided to the village.</string>
    <string name="pensions">PENSIONS</string>
    <string name="pensions_details">Get the details of pensions provided by Central and State Govt.</string>
    <string name="central_govt">Central Govt.</string>
    <string name="state_govt">State Govt.</string>
    <string name="maps">MAPS</string>
    <string name="maps_details">Get the details of land, owners and area in a map format.</string>
    <string name="land_info">LAND INFO</string>
    <string name="land_info_details">Get the full details of the land in the village.</string>
    <string name="land_cases">LAND CASES</string>
    <string name="land_cases_details">Get the details of the pending legal cases on the land.</string>
    <string name="agriculture">AGRICULTURE</string>
    <string name="agri_details">Get the required knowledge and help for farming.</string>
    <string name="mnrega">MGNREGA</string>
    <string name="mnrega_details">Get the details of activities under MGNREGA project.</string>
    <string name="housing">HOUSING</string>
    <string name="housing_details">Get the details of activities under PM Awas Yojana.</string>
    <string name="water">WATER</string>
    <string name="water_details"><![CDATA[Get the details of the installed and planned handpumps & tubewells in the village.]]></string>
    <string name="clean_india">CLEAN INDIA</string>
    <string name="clean_details">Get the details of the activities under Clean India Mission.</string>
    <string name="up_online">UP ONLINE</string>
    <string name="uponline_details"><![CDATA[Get information about the govt services, jobs & online forms.]]></string>
    <string name="e_district">e-DISTRICT</string>
    <string name="district_details">Get all the details related to your district.</string>
    <string name="elections">ELECTIONS</string>
    <string name="election_details">Get all the details of state and central elections.</string>
    <string name="food_civil"><![CDATA[FOOD & CIVIL]]></string>
    <string name="food_details">Get the details of ration card and crops.</string>
    <string name="transport">TRANSPORT</string>
    <string name="transport_details">Get the details related to vehicles and transportation.</string>
    <string name="web_directory">WEB DIRECTORY</string>
    <string name="web_details">Link to the central and state Govt web directory.</string>
    <string name="monitor_funds">MONITOR FUNDS</string>
    <string name="monitor_details">Get all the details related to public funds like scholarship, subsidy, pensions etc.</string>
    <string name="shubham_pathak">Shubham Pathak</string>
    <string name="android_developer">Android Developer</string>
    <string name="shubham_id">shubham.pathak2000@gmail.com</string>
    <string name="shubham_github">github.com/tronku</string>
    <string name="prabhat_pathak">Prabhat Pathak</string>
    <string name="content_provider">Content Provider</string>
    <string name="prabhat_email">prabhatpathak28@gmail.com</string>
    <string name="prabhatpathakblog">prabhatpathakblog</string>
</resources>
