<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="10dp"
            android:background="@color/blue"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/team"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:textSize="36sp"
                android:textColor="@color/yellow"/>

        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="top|end"
                    android:textSize="26sp"
                    android:text="@string/shubham_pathak"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_developer"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:layout_gravity="top|end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"/>

                <LinearLayout
                    android:id="@+id/shubham_email"
                    android:foreground="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="28dp"
                        android:src="@drawable/gmail"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shubham_id"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shubham_github"
                    android:foreground="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="28dp"
                        android:src="@drawable/github"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shubham_github"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:elevation="6dp"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/shubham"
                android:layout_gravity="top|start"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="top|start"
                    android:textSize="26sp"
                    android:text="@string/prabhat_pathak"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_provider"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"/>

                <LinearLayout
                    android:id="@+id/prabhat_email"
                    android:foreground="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="28dp"
                        android:src="@drawable/gmail"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prabhat_email"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/prabhat_wordpress"
                    android:foreground="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="28dp"
                        android:src="@drawable/wordpress"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prabhatpathakblog"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:elevation="6dp"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/prabhat_pic"
                android:layout_gravity="top|end"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </FrameLayout>




    </LinearLayout>

</ScrollView>